Fixed Button Wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,7 @@ button {
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
+  display: table;
 }
 
 .btn {
